test/should_not_compile/space_in_qualified_id.sml
TextIO . print "Hello world!\n";
